--- a/UMClient/UMClient.csproj
+++ b/UMClient/UMClient.csproj
@@ -41,5 +41,6 @@
 		<PackageReference Include="SukiUI" Version="6.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="System.IO.Ports" Version="7.0.0" />
+		<PackageReference Include="System.Management" Version="9.0.0" />
 	</ItemGroup>
 </Project>
